# inherit_test

./: README.md  pyproject.toml
docs/docs/: index.md
src/inherit_test/: center.py  main.py
src/inherit_test/child/: __init__.py  login.py
src/inherit_test/father/: __init__.py  login.py  login_api.py  main_logic.py
