[tool.poetry]
name = "inherit_test"
version = "0.1.0"
description = ""
authors = ["svtter <svtter@qq.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "private-pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

